# algorithm_exsample

algorithm/: CMakeLists.txt  longestprefix.cpp  vectorcopy.cpp
不用加减乘除做加法/: CMakeLists.txt  main.cpp
和为k的子数组/: CMakeLists.txt  main.cpp
快速排序/: CMakeLists.txt  main.cpp
替换空格/: CMakeLists.txt  main.cpp
调整顺序使奇数位与偶数前/: CMakeLists.txt  main.cpp
